# lwk-dart

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  cargokit_options.yaml  codegen.sh  compile.all.sh  compile.native.sh  flutter_rust_bridge.yaml  justfile  pubspec.yaml
.github/workflows/: precompiled_binaries.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/lwk_dart/: MainActivity.kt
assets/: release.config.txt
doc/: structure.md
docs/: structure.md
example/: pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  test_app.dart
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
integration_test/: simple_test.dart
ios/: lwk.podspec  lwk_dart.podspec
ios/Classes/: bindings.h  frb_generated.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/liblwk.xcframework/: Info.plist
lib/: lwk.dart  lwk_dart.dart
lib/src/: root.dart
lib/src/utils/: loader.dart
linux/: CMakeLists.txt  my_application.cc
macos/: lwk_dart.podspec
macos/Classes/: bindings.h  frb_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  Dockerfile  android.sh  api.rs  cargokit.yaml  compress.sh  copy.sh  darwin.sh  docker-entrypoint.sh  linux.sh  makefile  unit-test.sh
rust/.cargo/: config.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  electrum.rs  error.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  network.rs  types.rs  wallet.rs
rust/src/api/: blockchain.rs  descriptor.rs  error.rs  mod.rs  transaction.rs  types.rs  wallet.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_lwk_dart.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_lwk_dart.podspec
rust_builder/windows/: CMakeLists.txt
test/: lwk_root_test.dart  lwk_static_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
