[package]
name = "lwk"
description = "Flutter-Rust Bridge for Liquid Wallet Kit (lwk)"
authors = ["i5hi <ishi@satoshiportal.com>, mocodesmo <morteza@satoshiportal.com>"]
version = "0.1.5"
edition = "2021"

[lib]
name = "lwk"
doctest = false
crate-type = ["staticlib", "cdylib"] 

[dependencies]
lwk_wollet = { git = "https://github.com/Blockstream/lwk", rev = "5cfb36ada3d2b9de799eaabddf388827df4ab625",  package = "lwk_wollet" }
lwk_signer = { version = "0.8.0" }
lwk_common = {version = "0.8.0" }
thiserror = "1.0.50"
flutter_rust_bridge = "=2.0.0"
anyhow = "1.0.68"
lazy_static = "1.4.0"
hex = "0.4"
log = "0.4.22"

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=2.0.0" }

[build]
profiler = true

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
